--- a/index.html
+++ b/index.html
@@ -57,6 +57,18 @@
         </div>
     </div>
 
+    <!-- Modal de Carregando -->
+<div id="loadingModal" class="modal">
+    <div class="modal-content">
+        <h2>Sorteando...</h2>
+        <div class="emoji-container">
+            🎉🎊🥳
+        </div>
+        <p>Estamos organizando tudo para você!</p>
+    </div>
+</div>
+
+
     
 
 
